start sa match 3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
         <string name="decimal">.</string>
         <string name="equals">=</string>
         <string name="display">Enter a value</string>
+    <string name="empty"></string>
 
 </resources>
